--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body{
 textarea{
     font-family: "Roboto", Gill Sans, Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
     font-size: 1em;
+    /* width: 45vh; */
+    /* height: 40vh; */
+    width: 450px;
+    height: 270px;
+   
 }
 
 a {
@@ -361,6 +366,8 @@ button{
 
 #dreamTextContainer{
     padding-top: 20px;
+    /* width: 50%;
+    height: 30%; */
 }
 
 #dream{
